--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>С чистого листа</title>
   <link rel="stylesheet" href="./fonts/fonts.css">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./styles/css/style.css">
 </head>
 
 <body>  
@@ -196,7 +196,7 @@
   <p class="footer__copy">
     © VЁRSTKA
   </p>
-    <ul class="footer__links">
+  <ul class="footer__links">
       <li class="footer__link-list-item">
         <a href="#" class="footer__link-list-link">
           ВК
@@ -207,10 +207,10 @@
           Ютуб
         </a>
       </li>
-    </ul>
+  </ul>
 </footer>
 
-<!--  end -->
+<!-- Footer end -->
 
 </body>
 
